--- a/FossilDiscoveryLab/.env
+++ b/FossilDiscoveryLab/.env
@@ -1,7 +1,6 @@
-
-
-
-NEXT_PUBLIC_MAILCHIMP_URL="https://gmail.us9.list-manage.com/subscribe/post?u=e9975d41787a17e116807433d&amp;id=8b64d596ab&amp;f_id=0033eae3f0
+NEXT_PUBLIC_WORDPRESS_SITE_URL=http://localhost:8020
+NEXT_PUBLIC_NEXTJS_SITE_URL=http://localhost:3000
+NEXT_PUBLIC_MAILCHIMP_URL=https://gmail.us9.list-manage.com/subscribe/post?u=e9975d41787a17e116807433d&amp;id=8b64d596ab&amp;f_id=0033eae3f0
 
 
 
