--- a/FossilDiscoveryLab/package.json
+++ b/FossilDiscoveryLab/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
+    "dompurify": "^3.1.7",
     "framer-motion": "^11.9.0",
     "react": "^18.3.1",
     "react-datepicker": "^7.4.0",
     "react-dom": "^18.3.1",
+    "react-mailchimp-subscribe": "^2.1.3",
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
